# UAV-gimbal-fusion

./: CITATION  CITATION.cff  README.md
src/: bno055_ros.py
src/altimeter/scripts/: altimeter_node.py
src/gimbal_controller/scripts/: gimbal_controller_node.py  motion_fit.py
src/perception/: CMakeLists.txt  package.xml
src/perception/scripts/: perception_node.py
src/template-particle-filter/: CMakeLists.txt  package.xml
src/template-particle-filter/launch/: particle-filter.launch
src/template-particle-filter/src/: helper_functions.h  particle-filter.cpp  particle_filter.h  ros-particle-filter.cpp
