<?xml version="1.0"?>
<package>
  <name>particle-filter</name>
  <version>0.0.0</version>

  <description>
    This is a hierarchical templated based sampling strategy
  </description>

  <maintainer email="alex.kang@kuleuven.com">xueyang</maintainer>

  <license>BSD</license>

  <author email="alex.kang@kuleuven.com">Xueyang</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>  
  <build_depend>rosbag</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>
